2023-10-18T16:16:38Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6563673933 # 1999
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-18
* notice: last 14d: unq all: 64 169
* notice: prev accum: outdated-unq outdated-all / unq all: 1243 3057 / 1335 3226
* notice: next accum: outdated-unq outdated-all / unq all: 1244 3059 / 1336 3228
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2023-10-04] / [2023-10-18]

2023-10-18T08:16:42Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6558117104 # 1998
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-18
* notice: last 14d: unq all: 63 168
* notice: prev accum: outdated-unq outdated-all / unq all: 1243 3057 / 1334 3225
* notice: next accum: outdated-unq outdated-all / unq all: 1243 3057 / 1335 3226
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-04 2023-10-18]

2023-10-17T16:16:45Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6549984845 # 1996
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-17
* notice: last 14d: unq all: 63 168
* notice: prev accum: outdated-unq outdated-all / unq all: 1241 3053 / 1323 3207
* notice: next accum: outdated-unq outdated-all / unq all: 1243 3057 / 1334 3225
* notice: prev exec diff / last date diff / accum: unq all: +11 +18 -0 -0 / +22 +32 -0 -0 / 22 32
* notice: removed / changed dates: [2023-10-03] / [2023-10-17]

2023-10-17T08:17:12Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6544419795 # 1995