@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-18T16:16:38Z",
-  "count" : 3,
-  "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -0, +3 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2023-10-19T00:57:27Z",
+  "count" : 10,
+  "count_minmax" : [ 1, 10 ],
+  "count_decinc" : [ -0, +10 ],
+  "uniques" : 7,
+  "uniques_minmax" : [ 1, 7 ],
+  "uniques_decinc" : [ -0, +7 ]
 }
