@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-18T16:16:38Z",
+  "timestamp" : "2023-10-19T00:57:27Z",
   "count_outdated" : 3059,
   "uniques_outdated" : 1244,
-  "count" : 3228,
-  "uniques" : 1336,
+  "count" : 3235,
+  "uniques" : 1341,
   "clones" : [
     {
       "timestamp": "2023-10-05T00:00:00Z",
@@ -124,12 +124,12 @@
     },
     {
       "timestamp": "2023-10-18T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 10,
+      "count_minmax": [ 1, 10 ],
+      "count_decinc": [ 0, 10 ],
+      "uniques": 7,
+      "uniques_minmax": [ 1, 7 ],
+      "uniques_decinc": [ 0, 7 ]
     }
   ]
 }
