@@ -1,6 +1,6 @@
 {
-  "count": 169,
-  "uniques": 64,
+  "count": 176,
+  "uniques": 68,
   "clones": [
     {
       "timestamp": "2023-10-05T00:00:00Z",
@@ -69,8 +69,8 @@
     },
     {
       "timestamp": "2023-10-18T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 10,
+      "uniques": 7
     }
   ]
 }
